--- a/Windows-8-1-сборки.css
+++ b/Windows-8-1-сборки.css
@@ -4,11 +4,11 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 3317px;
+  min-height: 3380px;
 }
 
 .u-section-1 .u-text-1 {
-  margin: 28px auto 0;
+  margin: 29px auto 0;
 }
 
 .u-section-1 .u-text-2 {
@@ -52,38 +52,46 @@
 
 .u-section-1 .u-btn-2 {
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: 12px auto 0;
+  background-image: none;
+  margin: 6px auto 0;
   padding: 10px 41px;
 }
 
-.u-section-1 .u-text-4 {
-  margin: 26px auto 0;
+.u-section-1 .u-btn-3 {
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  background-image: none;
+  margin: 6px auto 0;
+  padding: 10px 43px;
 }
 
-.u-section-1 .u-btn-3 {
+.u-section-1 .u-text-4 {
+  margin: 66px auto 0;
+}
+
+.u-section-1 .u-btn-4 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   margin: 0 auto;
   padding: 10px 32px;
 }
 
-.u-section-1 .u-btn-4 {
+.u-section-1 .u-btn-5 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   margin: 6px auto 0;
   padding: 10px 30px;
 }
 
-.u-section-1 .u-btn-5 {
+.u-section-1 .u-btn-6 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: 6px auto 51px;
+  margin: 6px auto 29px;
   padding: 10px 37px;
 }
 
 @media (max-width: 1199px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 2668px;
+    min-height: 2787px;
   }
 
   .u-section-1 .u-text-3 {
@@ -95,7 +103,7 @@
 
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 2783px;
+    min-height: 1730px;
   }
 
   .u-section-1 .u-image-1 {
@@ -134,7 +142,7 @@
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 2635px;
+    min-height: 2719px;
   }
 
   .u-section-1 .u-image-1 {
@@ -169,22 +177,28 @@
     align-self: center;
   }
 
+  .u-section-1 .u-text-4 {
+    margin-top: 64px;
+  }
+
   .u-section-1 .u-btn-4 {
     align-self: center;
   }
 
   .u-section-1 .u-btn-5 {
-    margin-bottom: 28px;
+    align-self: center;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 2310px;
+    min-height: 874px;
   }
 
   .u-section-1 .u-text-1 {
     width: auto;
+    margin-left: 29px;
+    margin-right: 29px;
   }
 
   .u-section-1 .u-text-2 {
@@ -219,6 +233,11 @@
   }
 
   .u-section-1 .u-btn-2 {
+    margin-left: -64px;
+    margin-right: -64px;
+  }
+
+  .u-section-1 .u-btn-3 {
     margin-left: -64px;
     margin-right: -64px;
   }
