--- a/Windows-8-0-сборки.css
+++ b/Windows-8-0-сборки.css
@@ -47,13 +47,13 @@
 }
 
 .u-section-1 .u-text-3 {
-  margin: 26px auto 0 0;
+  margin: 26px auto 0;
 }
 
 .u-section-1 .u-btn-1 {
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   background-image: none;
-  margin: 47px auto 0 179px;
+  margin: 47px auto 0;
 }
 
 .u-section-1 .u-btn-2 {
@@ -119,32 +119,16 @@
 
   .u-section-1 .u-text-3 {
     width: auto;
-  }
-
-  .u-section-1 .u-btn-1 {
-    margin-left: 204px;
-  }
-
-  .u-section-1 .u-btn-2 {
-    margin-left: 273px;
+    margin-left: 69px;
+    margin-right: 69px;
   }
 
   .u-section-1 .u-text-4 {
     width: auto;
-    margin-left: 429px;
-  }
-
-  .u-section-1 .u-btn-3 {
-    margin-left: 387px;
-  }
-
-  .u-section-1 .u-btn-4 {
-    margin-left: 387px;
   }
 
   .u-section-1 .u-btn-5 {
     margin-bottom: 29px;
-    margin-left: 387px;
   }
 }
 
@@ -193,32 +177,15 @@
 
   .u-section-1 .u-text-3 {
     margin-top: 21px;
-    margin-right: 0;
-  }
-
-  .u-section-1 .u-btn-1 {
-    margin-left: auto;
-  }
-
-  .u-section-1 .u-btn-2 {
-    margin-left: auto;
+    margin-left: 35px;
+    margin-right: 35px;
   }
 
   .u-section-1 .u-text-4 {
     margin-top: 178px;
-    margin-left: auto;
-  }
-
-  .u-section-1 .u-btn-3 {
-    margin-left: auto;
-  }
-
-  .u-section-1 .u-btn-4 {
-    margin-left: auto;
   }
 
   .u-section-1 .u-btn-5 {
-    margin-left: auto;
     margin-bottom: 47px;
   }
 }
@@ -262,6 +229,11 @@
     width: 540px;
     margin-left: 0;
     margin-right: 0;
+  }
+
+  .u-section-1 .u-text-3 {
+    margin-left: 52px;
+    margin-right: 52px;
   }
 
   .u-section-1 .u-btn-1 {
